--- a/UDP_FlaskApp/babysitter_udp/templates/signup.html
+++ b/UDP_FlaskApp/babysitter_udp/templates/signup.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Sign Up{% endblock %}
 
 {% block body %}
     <div class="container" style="max-width: 500px; margin-top: 50px;">
         <div class="card">
             <div class="card-body">
-                <h2 class="card-title text-center">Login</h2>
-                <form method="POST" action="/login">
+                <h2 class="card-title text-center">Sign Up</h2>
+                <form method="POST" action="/signup">
                     <div class="mb-3">
                         <label for="username" class="form-label">Username</label>
                         <input type="text" class="form-control" id="username" name="username" required>
@@ -16,9 +16,9 @@
                         <label for="password" class="form-label">Password</label>
                         <input type="password" class="form-control" id="password" name="password" required>
                     </div>
-                    <button type="submit" class="btn btn-success w-100">Login</button>
+                    <button type="submit" class="btn btn-primary w-100">Sign Up</button>
                 </form>
-                <p class="mt-3 text-center">Don't have an account? <a href="/signup">Sign up here</a></p>
+                <p class="mt-3 text-center">Already have an account? <a href="/login">Login here</a></p>
             </div>
         </div>
     </div>
