--- a/UDP_FlaskApp/babysitter_udp/templates/login.html
+++ b/UDP_FlaskApp/babysitter_udp/templates/login.html
@@ -18,6 +18,7 @@
                     </div>
                     <button type="submit" class="btn btn-success w-100">Login</button>
                 </form>
+                <a href="/login/google" class="btn btn-danger w-100 mt-3">Login with Google</a>
                 <p class="mt-3 text-center">Don't have an account? <a href="/signup">Sign up here</a></p>
             </div>
         </div>
