--- a/UDP_FlaskApp/babysitter_udp/static/nav.css
+++ b/UDP_FlaskApp/babysitter_udp/static/nav.css
@@ -136,7 +136,7 @@
     flex-shrink: 0; 
 }
 
-@media (max-width: 600px) {
+
     .block3 {
         padding: 20px;
         display: grid; 
@@ -159,9 +159,12 @@
         align-items: center;
         font-weight: bold;
     }    
+    .grid-button { background-color: #876aad; } 
+    .grid-button2 { background-color: #97d1de; } 
+    .grid-button3 { background-color: #f2a0d4; } 
+    .grid-button4 { background-color: #ebc888; } 
 
 
-}
 
 
 
