--- a/UDP_FlaskApp/babysitter_udp/templates/video.html
+++ b/UDP_FlaskApp/babysitter_udp/templates/video.html
@@ -1,20 +1,52 @@
-<!DOCTYPE html>
+{% extends "layout.html" %}
+{% block body %}
+<div class="videocontainer">
+    <h1>Video Records</h1>
+<div class="videorecords">
+    <h2>20/10/2024 20:50</h2>
+    <video controls autoplay>
+        <source src="{{ video_url }}" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</div>
+<div class="videorecords">
+    <h2>20/10/2024 16:44</h2>
+    <video controls autoplay>
+        <source src="{{ video_url }}" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</div>
+<div class="videorecords">
+    <h2>20/10/2024 16:44</h2>
+    <video controls autoplay>
+        <source src="{{ video_url }}" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</div>
+
+<div class="videorecords">
+    <h2>20/10/2024 23:11</h2>
+    <video controls autoplay>
+        <source src="{{ video_url }}" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</div>
+</div>
+</div>
+   
+{% endblock %} 
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Stream</title>
 </head>
-<body>
-    <h1>Recorded Video</h1>
-    <video controls autoplay>
-        <source src="{{ video_url }}" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+<body> -->
     <!-- <p><a href="/">Back to Home</a></p> -->
      <!-- <p><a href="/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-down-left" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M9.636 2.5a.5.5 0 0 0-.5-.5H2.5A1.5 1.5 0 0 0 1 3.5v10A1.5 1.5 0 0 0 2.5 15h10a1.5 1.5 0 0 0 1.5-1.5V6.864a.5.5 0 0 0-1 0V13.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
         <path fill-rule="evenodd" d="M5 10.5a.5.5 0 0 0 .5.5h5a.5.5 0 0 0 0-1H6.707l8.147-8.146a.5.5 0 0 0-.708-.708L6 9.293V5.5a.5.5 0 0 0-1 0z"/>
       </svg></a></p> -->
-</body>
-</html>
+<!-- </body>
+</html> -->
