fixed the video and sound now working with pubnub

--- a/UDP_FlaskApp/babysitter_udp/templates/index.html
+++ b/UDP_FlaskApp/babysitter_udp/templates/index.html
@@ -11,6 +11,10 @@
                         <source src="{{ video_url }}" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
+                    <audio controls autoplay>
+                        <source src="{{ sound_url }}" type="audio/wav">
+                        Your browser does not support the audio tag.
+                    </audio>
                 </div>
             </div>
         <h4>Status</h4>
