--- a/UDP_FlaskApp/babysitter_udp/templates/layout.html
+++ b/UDP_FlaskApp/babysitter_udp/templates/layout.html
@@ -11,8 +11,28 @@
 </head>
 <body>
     <header class="headerchild">
-        <h1>Child 1</h1> <!-- set up different child pages at the top of the screen-->
-    </header>   {% block body %}
+        <svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" viewBox="0 0 16 16" onclick="toggleMenu()">
+            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+        </svg>
+        <div id="dropdown-menu" class="dropdown-content">
+            <button class="close-btn" onclick="toggleMenu()">✖</button>
+            <div class="controlcenter">
+            <a class="control-button" href="/Parent">Parent/Host Controls</a>
+            <a class="control-button" href="/Video">My Baby</a>
+            <a class="control-button" href="/Video">Settings</a>
+            <a class="control-button" href="/logout">Log out</a>
+        </div>
+    </div>
+          <h1>
+            {{ child_name }} </h1>  
+            {% if request.endpoint not in ['signup', 'login'] %}
+            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"/>
+            </svg> -->
+            {% endif %}
+             
+    </header>      
+    {% block body %}
     {% endblock %}
 
     <nav>
