--- a/UDP_FlaskApp/babysitter_udp/static/loginsignup.css
+++ b/UDP_FlaskApp/babysitter_udp/static/loginsignup.css
@@ -1,5 +1,4 @@
 body {
-    background-color: #ffffff;
     font-family: 'Arial', sans-serif;
     color: #333;
     margin: 0;
@@ -321,3 +320,7 @@ body {
       }
       
 }
+
+
+
+/* loginsignupcss */
