--- a/UDP_FlaskApp/babysitter_udp/templates/layout.html
+++ b/UDP_FlaskApp/babysitter_udp/templates/layout.html
@@ -9,6 +9,13 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='nav.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='loginsignup.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='video.css') }}">
+
+    <!-- user -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='user.css') }}">
+    <!-- history -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='history.css') }}">
+    <!-- onboarding -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='onboarding.css') }}">
 </head>
 <body>
     <header class="headerchild">
@@ -20,8 +27,8 @@
             <div class="controlcenter">
             <a class="control-button" href="/Parent">Parent/Host Controls</a>
             <a class="control-button" href="/Video">My Baby</a>
-            <a class="control-button" href="/Video">Settings</a>
-            <a class="control-button" href="/logout">Log out</a>
+            <a class="control-button" href="/settings">Settings</a>
+            <a class="control-button" href="/onboarding">onboarding</a>
         </div>
     </div>
           <h1>
