--- a/UDP_FlaskApp/babysitter_udp/templates/video.html
+++ b/UDP_FlaskApp/babysitter_udp/templates/video.html
@@ -54,6 +54,71 @@
     <p>No video available. Please wait for the video to be ready.</p>
 {% endif %}
 
+<script type="text/javascript">
+    // Initialize PubNub
+    const pubnub = new PubNub({
+        publishKey: "{{ pubnub_publish_key }}",
+        subscribeKey: "{{ pubnub_subscribe_key }}",
+        uuid: "{{ pubnub_uuid }}"
+    });
+
+    function sendPlayMusicCommand() {
+        // Define the message payload
+        const message = {
+            command: 'play_music',      
+        };
+
+        // Publish the message to the 'babysitter' channel
+        pubnub.publish({
+            channel: 'babysitter',
+            message: message
+        }, function (status, response) {
+            if (status.error) {
+                console.error('Error publishing message:', status);
+            } 
+        });
+    }
+
+    // Subscribe to the "babysitter" channel
+    pubnub.subscribe({
+        channels: ['babysitter']
+    });
+
+    // Listen for messages on the channel
+    pubnub.addListener({
+        message: function(event) {
+            console.log(event.message); // Log message to the console for debugging
+
+            if (event.message.video_ready) {
+            const videoElement = document.querySelector('video');
+            const sourceElement = videoElement.querySelector('source');
+            sourceElement.src = event.message.video_ready;
+            videoElement.load(); // Load the new video
+        }
+
+        // Update audio URL
+        if (event.message.audio_ready) {
+            const audioElement = document.querySelector('audio');
+            const audioSourceElement = audioElement.querySelector('source');
+            audioSourceElement.src = event.message.audio_ready;
+            audioElement.load(); // Load the new audio
+        }
+        },
+        status: function(statusEvent) {
+            if (statusEvent.category === "PNConnectedCategory") {
+                console.log('Connected to PubNub');
+            }
+        }
+    });
+</script>
+
+
+
+
+
+
+   
+
     <!-- <p><a href="/">Back to Home</a></p> -->
      <!-- <p><a href="/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-in-down-left" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M9.636 2.5a.5.5 0 0 0-.5-.5H2.5A1.5 1.5 0 0 0 1 3.5v10A1.5 1.5 0 0 0 2.5 15h10a1.5 1.5 0 0 0 1.5-1.5V6.864a.5.5 0 0 0-1 0V13.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
