--- a/UDP_FlaskApp/babysitter_udp/templates/layout.html
+++ b/UDP_FlaskApp/babysitter_udp/templates/layout.html
@@ -10,6 +10,20 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='loginsignup.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='video.css') }}">
     <script src="https://cdn.pubnub.com/sdk/javascript/pubnub.4.33.1.min.js"></script>
+
+    <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
+    <script src="{{ url_for('static', filename='sw.js') }}"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+          window.addEventListener('load', function() {
+            navigator.serviceWorker.register("/static/sw.js").then(function(registration) {
+              console.log('ServiceWorker registration successful with scope: ', registration.scope);
+            }, function(err) {
+              console.log('ServiceWorker registration failed: ', err);
+            });
+          });
+        }
+      </script>
    
 </head>
 <body>
