--- a/UDP_FlaskApp/babysitter_udp/static/nav.css
+++ b/UDP_FlaskApp/babysitter_udp/static/nav.css
@@ -1,4 +1,3 @@
-
 body
 {
     background-color: #e1daeb;
@@ -15,13 +14,68 @@ body
     color: #ffffff;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    position: relative;
 }
 
-.menu-icon {
-    width: 26px;
-    height: 26px;
-    cursor: pointer;
+.headerchild {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    padding: 10px 20px;
+    background-color: #B795E4;
+    color: #ffffff;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    position: relative;
 }
+
+.dropdown-content {
+    display: none; 
+    position: fixed; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #B795E4;
+    color: white;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; 
+    z-index: 1000; 
+    text-align: center;
+    padding: 20px; 
+    box-sizing: border-box;
+    transition: display 0.3s ease; 
+    padding-top: 45%;
+    padding-left: 5%;
+}
+
+
+.dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+}
+
+.dropdown-content a:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+.close-btn {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 32px;
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
 
 header h1 {
     font-size: 20px;
@@ -32,33 +86,9 @@ header h1 {
     display: flex;
     align-items: center;
     justify-content: center; 
+    margin-right: 30px;
 }
 
-header h1 svg {
-    margin-left: 10px;
-    cursor: pointer;
-}
-/* 
-.headerchild h1 {
-    padding: 20px;
-    display: flex;
-    align-items: center; 
-    justify-content: center;
-    gap: 8px;
-    line-height: 1.2;
-    color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.headerchild h1 svg {
-    margin-top: 2px;
-}
-
-.menu-icon {
-    margin-right: 10px; 
-    cursor: pointer;    
-    color: white
-} */
 
 
 .navbar {
@@ -76,7 +106,6 @@ header h1 svg {
     box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.5); 
     z-index: 1000; 
 }
-
 
 
 .homenav-item {
@@ -200,6 +229,8 @@ header h1 svg {
         justify-content: center;
         align-items: center;
         font-weight: bold;
+        text-decoration: none;
+        list-style-type: none;
     }    
     .grid-button { background-color: #876aad; } 
     .grid-button2 { background-color: #97d1de; } 
